Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12722

Creator crashes when closing HelpWidget of an example

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 3.2.0-rc1
    • Qt Creator 3.2.0-rc1
    • All Other Issues
    • Ubuntu 12.04 32bit, self-compiled Qt Creator (3.2 branch, d7d4d7190f7e6) based on Qt5.3.1
      Ubuntu 14.04 64bit, self-compiled Qt Creator (3.2 branch, d7d4d7190f7e6) based on Qt5.3.1

    Description

      Steps to reproduce:

      • inside Welcome page switch to Examples
      • click on any of the listed
        • Creator brings up another widget with the example documentation
      • close the new widget

      Current result:

      • Creator crashes

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              con Eike Ziller
              cstenger Christian Stenger
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes