Help: Fix crash when closing external help window

We need to explicitly remove the context that we registered for the
viewer in it. Otherwise it might happen that the deleted context object
is temporarily made "active" when the context for the whole window is
removed.

Change-Id: I903ae0a774751651cc2ec1661c0af8b8f7b3df2d
Task-number: QTCREATORBUG-12722
Reviewed-by: Christian Stenger <christian.stenger@digia.com>